--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.1.1"
 pre-commit = "^3.8.0"
+djangorestframework = "^3.15.2"
 
 
 [build-system]
