--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,13 @@ django = "^5.1.1"
 pre-commit = "^3.8.0"
 djangorestframework = "^3.15.2"
 torch = "^2.4.1"
+transformers = "^4.45.1"
+german = "^0.1.0"
+sentiment = "^0.0.1"
+germansentiment = "^1.1.0"
+pandas = "^2.2.3"
+numpy = "^2.1.1"
+matplotlib = "^3.9.2"
 
 
 [build-system]
