--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ germansentiment = "^1.1.0"
 pandas = "^2.2.3"
 numpy = "^2.1.1"
 matplotlib = "^3.9.2"
+mysql-connector-python = "^9.1.0"
 
 
 [build-system]
