--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pandas = "^2.2.3"
 numpy = "^2.1.1"
 matplotlib = "^3.9.2"
 mysql-connector-python = "^9.1.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
