--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
   }
