--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ numpy = "^2.1.1"
 matplotlib = "^3.9.2"
 mysql-connector-python = "^9.1.0"
 python-dotenv = "^1.0.1"
+pillow = "^11.0.0"
+mysqlclient = "^2.2.5"
 
 
 [build-system]
