fix: fixed SeAn

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ mysql-connector-python = "^9.1.0"
 python-dotenv = "^1.0.1"
 pillow = "^11.0.0"
 mysqlclient = "^2.2.5"
+django-environ = "^0.11.2"
+pymongo = "^4.10.1"
+certifi = "^2024.8.30"
 
 
 [build-system]
