--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@frontegg/vue": "^4.1.0",
+    "auth0-js": "^9.28.0",
+    "axios": "^1.7.8",
+    "dotenv": "^16.4.6",
+    "eventemitter3": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "pinia": "^2.1.7",
     "primevue": "^4.2.1",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
