--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,12 @@ pillow = "^11.0.0"
 django-environ = "^0.11.2"
 pymongo = "^4.10.1"
 certifi = "^2024.8.30"
+oauth = "^1.0.1"
+authlib = "^1.3.2"
+djangorestframework-jwt = "^1.11.0"
+python-jose = "^3.3.0"
+cryptography = "^44.0.0"
+django-cors-headers = "^4.6.0"
 
 
 [build-system]
