--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dsip": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
