--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "primevue": "^4.2.1",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.29",
+    "vue-native-websocket-vue3": "^3.1.8",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
