--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,12 @@ djangorestframework-jwt = "^1.11.0"
 python-jose = "^3.3.0"
 cryptography = "^44.0.0"
 django-cors-headers = "^4.6.0"
+channels = "^4.2.0"
+channels-redis = "^4.2.1"
+uvicorn = "^0.33.0"
+wsproto = "^1.2.0"
+websockets = "^14.1"
+daphne = "^4.1.2"
 
 
 [build-system]
