fix: fixed gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 AccessTests/
 .env
 .idea
+.backend/backend/__pycache__/
+.backend/backend/DSIP/__pycache__/
+.backend/backend/db_access/__pycache__/
+.backend/backend/sentiment_model/__pycache__/
