--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.29",
     "vue-native-websocket-vue3": "^3.1.8",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
