--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ openai = "^1.59.6"
 goslate = "^1.5.4"
 deep-translator = "^1.11.4"
 deepl = "^1.20.0"
+django-redis = "^5.4.0"
 
 
 [build-system]
